<resources>
    <string name="app_name">SlagalicaApp</string>
    <string name="profile_avatar">Avatar korisnika</string>
    <string name="profile_league_icon">Ikona lige</string>
    <string name="profile_change_avatar">Promeni avatar</string>
    <string name="profile_logout">Logout</string>
    <string name="profile_qr_title">QR kod za poziv prijatelja</string>
    <string name="profile_qr_code">QR kod za skeniranje</string>
    <string name="profile_average_title">Uspešnost po igri</string>
    <string name="profile_detail_title">Detaljna statistika</string>
    <string name="profile_no_stats">Nema dostupnih statistika</string>
    <string name="profile_region_value">Region: %1$s</string>
    <string-array name="regioni_srbije">
        <item>Izaberi region…</item>
        <item>Beograd</item>
        <item>Vojvodina</item>
        <item>Centralna Srbija</item>
        <item>Južna Srbija</item>
    </string-array>
    <string name="placeholder_one">"?"</string>
    <string name="placeholder_two">"??"</string>
    <string name="placeholder_three">"???"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="challenges_title_prefix">Regionalni Izazovi - %1$s</string>
    <string name="btn_create_challenge">Kreiraj novi izazov (Mini-Turnir)</string>
    <string name="active_challenges_label">Aktivni izazovi u vašem regionu:</string>
    <string name="challenge_host_label">Domaćin: %1$s</string>
    <string name="challenge_wager_label">Ulog: %1$d 🌟 | %2$d 🪙</string>
    <string name="challenge_players_count">Igrača: %1$d/%2$d</string>
    <string name="btn_action_accept">Prihvati</string>
    <string name="btn_action_results">Rezultati</string>
    <string name="btn_action_in_progress">U toku</string>
    <string name="btn_action_play_again">Igraj opet</string>
    <string name="btn_regional_challenges_title">Regionalni Izazovi</string>
    <string name="dialog_create_title">Postavi novi Izazov</string>
    <string name="dialog_btn_wager">Licitiraj</string>
    <string name="dialog_btn_cancel">Odustani</string>
    <string name="error_max_wager">Maksimalan ulog je 10 zvezda i 2 tokena!</string>
    <string name="challenge_created_success">Izazov uspešno kreiran! Čekanje igrača...</string>

    <string name="dialog_results_title">Konačni bilans Mini-Turnira</string>
    <string name="dialog_results_wager_summary">Ulog po igraču: %1$d 🌟 / %2$d 🪙\n\n</string>
    <string name="dialog_results_heading">RANG LISTA OSVOJENIH BODOVA:\n</string>
    <string name="dialog_results_row">%1$d. %2$s -> %3$d poena</string>
    <string name="suffix_first_place"> 🏆 (Osvaja 75% fonda)</string>
    <string name="suffix_second_place"> 🥈 (Povraćaj uloga)</string>
</resources>